--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,181 @@
-*,html,
-body {
+html {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  outline: none;
+  overflow-y: auto;
+  overflow-x: hidden;
   font-family: Inter;
   font-size: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+/* *,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+} */
+
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-weight: bold;
+} */
+
+p {
+  margin: 0;
+}
+
+body {
+  margin: 0;
+  background-color: #fff;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  padding: 20px 0;
+  text-align: left;
+}
+
+.header {
+  align-items: center;
+  padding: 25px 0;
+  background-color: #208aec;
+}
+
+.header_logo {
+  height: 55px;
+  margin-bottom: 20px;
+  object-fit: contain;
+}
+
+.header_text_bold {
+  margin-bottom: 3px;
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.header_text {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 15px;
+}
+
+.heading {
+  font-size: 22px;
+  color: #0A9E88;
+  display: flex;
+  justify-content: center;
+}
+
+.form_wrapper {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.form_input {
+  margin-bottom: 20px;
+  /* box-shadow: 2px 10px #0A9E88; */
+  border: 1px solid #0A9E88;
+}
+
+.form_input:hover{
+  border: 1px solid #0A9E88;
+}
+.form_button {
+  width: 100%;
+  background-color: #0A9E88;
+}
+
+.form_button:hover{
+  background-color: #077666;
+}
+
+.App {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex_between {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex_child {
+  flex: 0 0 45%;
+}
+
+.heading_button {
+  margin-left: 12px;
+}
+
+.list_item {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+  text-align: left;
+}
+
+.list_item_title {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 17px;
+}
+
+.list_item_description {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 15px;
+}
+
+.form_input {
+  margin-bottom: 20px;
+}
+
+.login-social {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.login-social-item {
+  width: 54px;
+  height: 54px;
+  border-radius: 54px;
+  padding: 12px;
+  margin: 0 12px;
+  border: 1px solid #e6e6e6;
+  box-shadow: 0 2px 4px #d6d6d6;
+}
+
+.login-social-item--facebook {
+  padding: 4px;
+  background-color: #3c5b9b;
+}
+
+.login-social-item__image {
+  width: 100%;
+}
+
+.form__hint {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 16px;
+  text-align: center;
+}
+
+.Link_class{
+  color: #0A9E88;
+  text-decoration: none;
 }
