fixed Minor Bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,6 +98,9 @@ body {
   background-color: #0A9E88;
 }
 
+.form_button:active{
+  background-color: #077666;
+}
 .form_button:hover{
   background-color: #077666;
 }
